--- a/src/main/resources/templates/user/userindex.html
+++ b/src/main/resources/templates/user/userindex.html
@@ -9,7 +9,7 @@
     <body class="PagUsr">
         <div align="center">
             <h1><font color="white">Página do Usuário</font></h1>
-            <h3><font color="white">Olá não sei pegar o nome do user no thymeleaf ainda</font></h3>
+            <h3><font color="white">Olá <span sec:authentication="name">A</span></font></h3>
         </div>
         <div class="containeruser">
             <ol class="rounded-list">
