Cria user funcional

--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -33,9 +33,9 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
                         <h2> CRUD USERS<br></h2>
                         <br>
                     <li><a th:href="@{/admin/listausers}">Listar Users</li></a>
-                    <li><a th:href="@{/admin/criauser}">Adicionar User</li></a>
+                    <li><a th:href="@{/admin/cadastrouser}">Adicionar User</li></a>
                     <br>
-                    <h2> CURD LOJAS<br></h2>
+                    <h2> CRUD LOJAS<br></h2>
                     <li><a th:href="@{/admin/crialoja}">Criar Loja</li></a>
                     <li><a th:href="@{/admin/listaloja}">Listar Lojas</li></a>
                 <li> <a href="#" onclick="document.getElementById('logout-form').submit();">Quitar</a></li>
