Arrumando a página de login

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -147,7 +147,7 @@ body.login{
 
 }
 
-.formBox p {
+.formBox label {
     margin: 0;
     padding: 0;
     font-weight: bold;
@@ -160,7 +160,7 @@ body.login{
 
 }
 
-.formBox input[type="text"],
+.formBox input[type="username"],
 .formBox input[type="password"] {
     border: none;
     border-bottom: 2px solid #000;
@@ -168,7 +168,7 @@ body.login{
     height: 40px;
 }
 
-.formBox input[type="text"]:focus,
+.formBox input[type="username"]:focus,
 .formBox input[type="password"]:focus{
     border-bottom: 2px solid rgb(9,119, 255);
 
