--- a/src/main/resources/templates/admin/cadastrouser.html
+++ b/src/main/resources/templates/admin/cadastrouser.html
@@ -1,6 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
   <head>
     <title>Registro de Usuário</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <style>
     body {
       background-image: url(${pageContext.request.contextPath}/img/car.jpg);
@@ -8,10 +14,12 @@
       background-position: center;
     }
   </style>
+
+  <link rel="stylesheet" type ="text/css" th:href="@{/css/style.css}">
   </head>
   <body>
     <div align="center">
-      <h1><font color="black"><font color="White">Gerenciamento de Usuários</font></h1>
+      <h1><font color="black"><font color="Black">Gerenciamento de Usuários</font></h1>
       <h2>
         <a th:href="@{/admin/listausers}">Listar Usuários</a>
       </h2>
