--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -16,7 +16,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
                 <img th:src="@{/image/logo_free.jpg}">
               </div>
               <ul class="top_bar">
-                <li><a href="contact.html">Contato</a></li>
+                <li><a th:href="@{/contato}">Contato</a></li>
                 <li><a th:href="@{/login}">Login</a></li>
                 <li><a class="active" th:href="@{/home}">Home</a></li>
               </ul>
@@ -36,7 +36,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
                     <li><a th:href="@{/admin/cadastrouser}">Adicionar User/Loja</li></a>
                     <br>
                     <h2> CRUD LOJAS<br></h2>
-                    <li><a th:href="@{/admin/listaloja}">Listar Lojas</li></a>
+                    <li><a th:href="@{/admin/listalojas}">Listar Lojas</li></a>
                 <li> <a href="#" onclick="document.getElementById('logout-form').submit();">Quitar</a></li>
                 <form id="logout-form" th:action="@{/logout}" method="post"></form>
               </div>
