--- a/src/main/resources/templates/admin/cadastrouser.html
+++ b/src/main/resources/templates/admin/cadastrouser.html
@@ -66,11 +66,10 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
             
             <div class="form-group col-md-6">
-                <label text="CPF:" for="cpf"></label> 
+                <label text="CPF/CNPJ:" for="cpf"></label> 
                 <input type="text" class="form-control" id="cpf" th:field="*{cpf}"
                     autofocus="autofocus" placeholder="___.___.___-__"
-                    th:classappend="${#fields.hasErrors('cpf')} ? is-invalid" 
-                    data-mask="000.000.000-00" data-mask-reverse="true" />
+                    th:classappend="${#fields.hasErrors('cpf')} ? is-invalid" />
                     
                 <div class="invalid-feedback">
                     <span th:errors="*{cpf}"></span>
@@ -100,7 +99,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label text="Data Nascimento:" for="datanasc"></label> 
+                <label for="datanasc">Data Nascimento:</label> 
                 <input type="text" class="form-control" id="datanasc" th:field="*{datanasc}"
                     placeholder="00/00/0000" autofocus="autofocus"
                     th:classappend="${#fields.hasErrors('datanasc')} ? is-invalid" />
@@ -109,19 +108,30 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
                     <span th:errors="*{datanasc}"></span>
                 </div>
             </div>
-        </div>
 
-        <div class="form-group col-md-6">
-            <label text="Papel:" for="role"></label> 
-            <select id="role" class="form-control" th:field="*{role}"
-                th:classappend="${#fields.hasErrors('role')} ? is-invalid">
-                <option value="ROLE_ADMIN">ROLE_ADMIN</option>
-                <option value="ROLE_USER">ROLE_USER</option>
-                <option value="ROLE_LOJA">ROLE_LOJA</option>
-            </select>
+            <div class="form-group col-md-6">
+                <label for="descricao">Descrição (Loja):</label> 
+                <input type="text" class="form-control" id="descricao" th:field="*{descricao}"
+                    autofocus="autofocus"
+                    th:classappend="${#fields.hasErrors('descricao')} ? is-invalid" />
+                    
+                <div class="invalid-feedback">
+                    <span th:errors="*{descricao}"></span>
+                </div>
+            </div>
 
-            <div class="invalid-feedback">
-                <span th:errors="*{role}"></span>
+            <div class="form-group col-md-6">
+                <label text="Papel:" for="role"></label> 
+                <select id="role" class="form-control" th:field="*{role}"
+                    th:classappend="${#fields.hasErrors('role')} ? is-invalid">
+                    <option value="ROLE_ADMIN">ROLE_ADMIN</option>
+                    <option value="ROLE_USER">ROLE_USER</option>
+                    <option value="ROLE_LOJA">ROLE_LOJA</option>
+                </select>
+    
+                <div class="invalid-feedback">
+                    <span th:errors="*{role}"></span>
+                </div>
             </div>
         </div>
 
