--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
            <img th:src="@{/image/logo_free.jpg}">
          </div>
          <ul class="top_bar">
-            <li><a href="contact.html">Contato</a></li>
+            <li><a th:href="@{/contato}">Contato</a></li>
           <li><a th:href="@{/login}">Login</a></li>
           <li><a class="active" th:href="@{/home}">Home</a></li>
          </ul>
