Lista carros startada

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
     </header>
     <div class="action_btn">
       <a th:href="@{/login}" class="btn">Vender</a>
-      <a th:href="@{/lista}" class="btn">Comprar</a>
+      <a th:href="@{/listacarros/lista}" class="btn">Comprar</a>
     </div>
   </body>
 </html>
