--- a/src/main/resources/templates/admin/cadastrouser.html
+++ b/src/main/resources/templates/admin/cadastrouser.html
@@ -7,13 +7,13 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <style>
+    <!--<style>
     body {
-      background-image: url(${pageContext.request.contextPath}/img/car.jpg);
+      background-image: url(../image/car.jpg);
       background-size: cover;
       background-position: center;
     }
-  </style>
+  </style>-->
 
   <link rel="stylesheet" type ="text/css" th:href="@{/css/style.css}">
   </head>
