Login passa parâmetro

--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html  
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +26,7 @@
       <input type="submit" name="Confirmar" id="">
     </div>
     <div class="image-grid">
-      <a th:each="carro : ${carros}" class="teste" href="logins?placa=${carro.placa}"><img th:src="@{/image/{modelo}.jpg (modelo=${carro.modelo})}" alt="carroalt"><h2 class="titulo_carro"
+      <a th:each="carro : ${carros}" class="teste" th:href="@{/user/cadastroproposta/{id} (id=${carro.id})}"><img th:src="@{/image/{modelo}.jpg (modelo=${carro.modelo})}" alt="carroalt"><h2 class="titulo_carro"
         th:text="${carro.modelo} + ' ' + ${carro.valor}"></h2>
     </div>
   </body>
