--- a/src/main/resources/templates/loja/lojaindex.html
+++ b/src/main/resources/templates/loja/lojaindex.html
@@ -21,7 +21,7 @@
             <a th:href="@{/loja/cadastrocarro}">Adicionar Carro</a>
             <a href="#">Adicionar Foto</a>
             <a href="#">Listar Propostas</a>
-            <a href="#" onclick="document.getElementById('logout-form').submit();"><h2>Logout</h2></a>
+            <a href="#" onclick="document.getElementById('logout-form').submit();">Logout</a>
             <form id="logout-form" th:action="@{/logout}" method="post"></form>
         </div>
         <br>
