--- a/src/main/resources/templates/loja/lojaindex.html
+++ b/src/main/resources/templates/loja/lojaindex.html
@@ -20,7 +20,7 @@
 
             <a th:href="@{/loja/cadastrocarro}">Adicionar Carro</a>
             <a href="#">Adicionar Foto</a>
-            <a href="#">Listar Propostas</a>
+            <a th:href="@{/loja/listapropostaloja}">Listar Propostas</a>
             <a href="#" onclick="document.getElementById('logout-form').submit();">Logout</a>
             <form id="logout-form" th:action="@{/logout}" method="post"></form>
         </div>
