--- a/src/main/resources/templates/user/userindex.html
+++ b/src/main/resources/templates/user/userindex.html
@@ -14,7 +14,7 @@
         <div class="containeruser">
             <ol class="rounded-list">
                 <div class="teste">
-                    <a href="./lista"><h2> Lista de Propostas</h2></a>
+                    <a th:href="@{/user/listapropostauser}"><h2> Lista de Propostas</h2></a>
                     <br>
                     <br>
                     <a href="#" onclick="document.getElementById('logout-form').submit();"><h2>Logout</h2></a>
